--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,7 @@
     <!-- Blog Header -->
     <div class="blog-header">
         <div class="container">
-            <h1 class="blog-title">BLOG</h1>
+            <h1 class="blog-title">DynaML Blog</h1>
             <p class="blog-subtitle">Insights on Machine Learning, Data Science & AI</p>
         </div>
     </div>
@@ -45,10 +45,7 @@
                     <!-- Index will be rendered here by JavaScript -->
                 </aside>
                 <div class="articles-main" id="articlesGrid">
-                    <div class="welcome-message">
-                        <h2>Welcome to the Blog</h2>
-                        <p>Select a topic from the index on the left to browse articles.</p>
-                    </div>
+                    <!-- Articles will appear here when selected from index -->
                 </div>
             </div>
         </div>
@@ -152,19 +149,6 @@
             color: var(--secondary);
             border-left-color: var(--secondary);
             padding-left: 1rem;
-        }
-
-        .welcome-message {
-            text-align: center;
-            padding: 4rem 2rem;
-            color: var(--text-dim);
-        }
-
-        .welcome-message h2 {
-            font-family: 'Orbitron', sans-serif;
-            color: var(--primary);
-            margin-bottom: 1rem;
-            font-size: 2rem;
         }
 
         .articles-main .article-card {
