--- a/article.html
+++ b/article.html
@@ -10,8 +10,9 @@
     <!-- Marked.js for Markdown parsing -->
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <!-- Highlight.js for code syntax highlighting -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/dracula.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/python.min.js"></script>
     <style>
         :root {
             --primary: #00FF00;        /* Matrix green */
@@ -260,7 +261,7 @@
         }
 
         .article-content pre {
-            background: var(--dark);
+            background: #282a36 !important;  /* Dracula background */
             border: 1px solid rgba(0, 255, 0, 0.2);
             padding: 1.5rem;
             border-radius: 5px;
@@ -269,9 +270,10 @@
         }
 
         .article-content pre code {
-            background: none;
+            background: none !important;
             padding: 0;
             color: inherit;
+            font-family: 'JetBrains Mono', monospace;
         }
 
         .article-content img {
